# rotoml

./: .gitignore  Cargo.toml  Readme.md  data_report.md
src/: data_loader.rs  data_reporter.rs  lib.rs  main.rs
src/data/: mod.rs  raw_loader.rs
src/data/infer/: dataset.rs  error.rs  io.rs  mod.rs  value.rs
