[package]
name = "rotoml"
version = "0.1.1"
authors = ["Okan Yenigün okanyenigun@gmail.com"]
edition = "2021"
license = "MIT"
description = "A native Rust AutoML pipeline toolkit"
repository = "https://github.com/okanyenigun/rotoml"
readme = "README.md"
keywords = ["machine-learning", "automl", "ai", "agent", "data-science"]
categories = ["science", "algorithms", "data-structures"]

[dependencies]
polars = { version = "0.33.2", features = ["lazy", "csv", "dtype-full", "strings"] }
clap = { version = "4.0", features = ["derive"] }